--- a/index2.html
+++ b/index2.html
@@ -80,8 +80,9 @@
   <body>
     <div class="marquee-container">
       <marquee scrollamount="20"
-        >ยินดีต้อนรับสู่เว็บที่ไร้สาระที่สุดในโลกโดย Temydogo และ LL2dogo!!! ไม่มีไอดอสฮาๆๆๆๆๆ
-        สั่งซื้อหมาวันนี้ แถมฟรีความปวดหัว!!!</marquee
+        >ยินดีต้อนรับสู่เว็บที่ไร้สาระที่สุดในโลกโดย Temydogo และ LL2dogo!!!
+        ไม่มีไอดอสฮาๆๆๆๆๆ ไอฟริ๊งด้วยฮือๆๆๆ สั่งซื้อหมาวันนี้
+        แถมฟรีความปวดหัว!!!</marquee
       >
     </div>
 
